Revert "* Fix #160 Menu: Submenu open overlap (v. 1.10.1)"
This reverts commit 238fd03fca0f2bd2f87c9eae384ace9e9ca1d076.

--- a/css/custom-theme/jquery-ui-1.10.1.custom.css
+++ b/css/custom-theme/jquery-ui-1.10.1.custom.css
@@ -240,7 +240,7 @@
 }
 
 .ui-widget .ui-widget {
-	font-size: 13px;
+	font-size: 1em;
 }
 
 .ui-widget input,
@@ -248,7 +248,7 @@
 .ui-widget textarea,
 .ui-widget button {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: inherit;
+	font-size: 1em;
 }
 
 .ui-widget-content {
@@ -1189,37 +1189,32 @@ button.ui-button::-moz-focus-inner {
 	padding: 2px;
 	margin: 0;
 	display: block;
+	float:left;
 	outline: none;
 }
 
-.ui-menu .ui-menu{
+.ui-menu .ui-menu {
 	margin-top: -3px;
 	position: absolute;
 	list-style:none;
 }
 
-/*
-* Bug inline with IE sub menu
-*/
-/* IE9, IE10 */
-@media screen and (min-width:0\0) {
-	.ui-menu li {
-	  list-style-type: none;
-	  display: inline;
-	  line-height: 0;
-	}
-
-	li.ui-menu-item { 
-	  /* This fixes the IE10 issue (jQuery UI Issue #8844)*/
-	  list-style-type: none;
-	}
+.ui-menu li {
+  list-style-type: none;
+  display: inline;
+  line-height: 0;
 }
 
-/*******/
+li.ui-menu-item { 
+  /* This fixes the IE10 issue (jQuery UI Issue #8844)*/
+  list-style-type: none;
+}
 
 .ui-menu .ui-menu-item {
 	margin: 0;
 	padding: 0;
+	/*float: left;
+	clear: left;*/
 	width: 100%;
 	list-style:none;
 }
@@ -1239,17 +1234,13 @@ button.ui-button::-moz-focus-inner {
 	line-height: 1.5;
 	min-height: 0; /* support: IE7 */
 	font-weight: normal;
-}
-
-.ui-menu .ui-menu-item a.ui-corner-all{
-	-webkit-border-radius: 0px; /* Safari 4 */
+    -webkit-border-radius: 0px; /* Safari 4 */
     -moz-border-radius: 0px; /* Firefox 3.6 */
     border-radius: 0px;
 }
 
 .ui-menu .ui-menu-item a.ui-state-focus,
-.ui-menu .ui-menu-item a.ui-state-active,
-.ui-menu .ui-menu-item a.ui-widget-content{
+.ui-menu .ui-menu-item a.ui-state-active {
 	font-weight: normal;
 	margin: 0;
 	color: #ffffff;
